fix(mobile): make headline-spacer stretch to inner viewport height

--- a/src/_content-wrap.less
+++ b/src/_content-wrap.less
@@ -816,6 +816,7 @@
     position: relative;
     box-sizing: border-box;
     height: calc(100vh - 44px); // #toolbar height
+    height: calc(100dvh - 44px); // exclude browser ui on mobile
     padding-top: calc(@headline-height + 1px);
 
     // loading next headlines
